# compound-interest-calculator

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: handlers.py  main.py  settings.py  test_main.py  tools.py
app/examples/: special.json  standard.json
